--- a/scipy_optimization_NS+HEAT.ipynb
+++ b/scipy_optimization_NS+HEAT.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "52d867c7",
+   "id": "5e75da35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "9e9fff15",
+   "execution_count": 8,
+   "id": "ee4b0121",
    "metadata": {},
    "outputs": [],
    "source": [
     "def physics_loss_numpy(params, x, alpha=0.143e-6, beta=1/1000, nu=0.000001):\n",
-    "    nx, ny = x.shape[1], x.shape[2]\n",
+    "    nx, ny = x.shape[0], x.shape[1]\n",
     "    dx = 10 / nx\n",
     "    dy = 1 / ny\n",
     "\n",
@@ -29,28 +29,28 @@
     "    p = params[2*nx*ny:3*nx*ny].reshape(nx, ny)\n",
     "    T = params[3*nx*ny:].reshape(nx, ny)\n",
     "    # Central difference for interior points for u_x\n",
-    "    u_x_internal = (u[:, 2:, 1:-1,:] - u[:, :-2, 1:-1,:]) / (2 * dx)\n",
-    "    u_y_internal= (u[:, 1:-1,2:,:] - u[:, 1:-1,:-2,:]) / (2 * dy)\n",
-    "    u_xx_internal= (u[:, 2:, 1:-1,:] - 2 * u[:, 1:-1, 1:-1,:] + u[:, :-2, 1:-1,:]) / (dx ** 2)\n",
-    "    u_yy_internal=(u[:, 1:-1,2:,:] - 2 * u[:, 1:-1, 1:-1,:] + u[:, 1:-1,:-2,:]) / (dy ** 2)\n",
+    "    u_x_internal = (u[ 2:, 1:-1] - u[ :-2, 1:-1]) / (2 * dx)\n",
+    "    u_y_internal= (u[ 1:-1,2:] - u[ 1:-1,:-2]) / (2 * dy)\n",
+    "    u_xx_internal= (u[ 2:, 1:-1] - 2 * u[ 1:-1, 1:-1] + u[ :-2, 1:-1]) / (dx ** 2)\n",
+    "    u_yy_internal=(u[ 1:-1,2:] - 2 * u[ 1:-1, 1:-1] + u[ 1:-1,:-2]) / (dy ** 2)\n",
     "        \n",
-    "    v_x_internal = (v[:, 2:, 1:-1,:] - v[:, :-2, 1:-1,:]) / (2 * dx)\n",
-    "    v_y_internal= (v[:, 1:-1,2:,:] - v[:, 1:-1,:-2,:]) / (2 * dy)\n",
-    "    v_xx_internal= (v[:, 2:, 1:-1,:] - 2 * v[:, 1:-1, 1:-1,:] + v[:, :-2, 1:-1,:]) / (dx ** 2)\n",
-    "    v_yy_internal=(v[:, 1:-1,2:,:] - 2 * v[:, 1:-1, 1:-1,:] + v[:, 1:-1,:-2,:]) / (dy ** 2)\n",
+    "    v_x_internal = (v[ 2:, 1:-1] - v[ :-2, 1:-1]) / (2 * dx)\n",
+    "    v_y_internal= (v[ 1:-1,2:] - v[ 1:-1,:-2]) / (2 * dy)\n",
+    "    v_xx_internal= (v[ 2:, 1:-1] - 2 * v[ 1:-1, 1:-1] + v[ :-2, 1:-1]) / (dx ** 2)\n",
+    "    v_yy_internal=(v[ 1:-1,2:] - 2 * v[ 1:-1, 1:-1] + v[ 1:-1,:-2]) / (dy ** 2)\n",
     "        \n",
-    "    T_x_internal = (T[:, 2:, 1:-1,:] - T[:, :-2, 1:-1,:]) / (2 * dx)\n",
-    "    T_y_internal= (T[:, 1:-1,2:,:] - T[:, 1:-1,:-2,:]) / (2 * dy)\n",
-    "    T_xx_internal= (T[:, 2:, 1:-1,:] - 2 * T[:, 1:-1, 1:-1,:] + T[:, :-2, 1:-1,:]) / (dx ** 2)\n",
-    "    T_yy_internal=(T[:, 1:-1,2:,:] - 2 * T[:, 1:-1, 1:-1,:] + T[:, 1:-1,:-2,:]) / (dy ** 2)\n",
+    "    T_x_internal = (T[ 2:, 1:-1] - T[ :-2, 1:-1]) / (2 * dx)\n",
+    "    T_y_internal= (T[ 1:-1,2:] - T[ 1:-1,:-2]) / (2 * dy)\n",
+    "    T_xx_internal= (T[ 2:, 1:-1] - 2 * T[ 1:-1, 1:-1] + T[ :-2, 1:-1]) / (dx ** 2)\n",
+    "    T_yy_internal=(T[ 1:-1,2:] - 2 * T[ 1:-1, 1:-1] + T[ 1:-1,:-2]) / (dy ** 2)\n",
     "\n",
-    "    p_x_internal=(p[:, 2:, 1:-1,:] - p[:, :-2, 1:-1,:]) / (2 * dx)\n",
-    "    p_y_internal=(p[:, 1:-1,2:,:] - p[:, 1:-1,:-2,:]) / (2 * dy)\n",
+    "    p_x_internal=(p[ 2:, 1:-1] - p[ :-2, 1:-1]) / (2 * dx)\n",
+    "    p_y_internal=(p[ 1:-1,2:] - p[ 1:-1,:-2]) / (2 * dy)\n",
     "        # Continuity Loss\n",
-    "    u_internal=u[:, 1:-1, 1:-1, :]\n",
+    "    u_internal=u[ 1:-1, 1:-1]\n",
     "        \n",
     "\n",
-    "    v_internal=v[:, 1:-1, 1:-1, :]\n",
+    "    v_internal=v[ 1:-1, 1:-1]\n",
     "\n",
     "\n",
     "        \n",
@@ -77,34 +77,34 @@
     "    L_heat = np.mean((L_heat1 - f)**2)\n",
     "\n",
     "    u_avg = 10**-3\n",
-    "    u_inlet_expected = u_avg*1.5*(1 - 4*(y[:, 0, :]**2))\n",
+    "    u_inlet_expected = u_avg*1.5*(1 - 4*(y[ 0, :]**2))\n",
     "    T_wall = 350\n",
     "    T_center = 293\n",
-    "    T_inlet_expected = T_wall + (T_center - T_wall) * (1 - 4*(y[:, 0, :]**2))\n",
+    "    T_inlet_expected = T_wall + (T_center - T_wall) * (1 - 4*(y[ 0, :]**2))\n",
     "\n",
     "    # Loss due to boundary conditions\n",
-    "    left_T_bc1 = T[:, 0, :]\n",
+    "    left_T_bc1 = T[ 0, :]\n",
     "    left_T_bc = np.mean((left_T_bc1 - T_inlet_expected)**2)\n",
     "\n",
-    "    top_T_bc1 = T[:, :, 0]\n",
+    "    top_T_bc1 = T[ :, 0]\n",
     "    T_wallvec = np.full_like(top_T_bc1, T_wall)\n",
     "    top_T_bc = np.mean((top_T_bc1 - T_wallvec)**2)\n",
     "\n",
-    "    bottom_T_bc1 = T[:, :, -1]\n",
+    "    bottom_T_bc1 = T[ :, -1]\n",
     "    bottom_T_bc = np.mean((bottom_T_bc1 - T_wallvec)**2)\n",
     "\n",
     "    boundaryzero = np.zeros_like(u[:, :, 0])\n",
     "\n",
-    "    left_u_bc = np.mean((u[:, 0, :] - u_inlet_expected)**2)\n",
-    "    top_u_bc = np.mean((u[:, :, 0] - boundaryzero)**2)\n",
-    "    bottom_u_bc = np.mean((u[:, :, -1] - boundaryzero)**2)\n",
+    "    left_u_bc = np.mean((u[ 0, :] - u_inlet_expected)**2)\n",
+    "    top_u_bc = np.mean((u[ :, 0] - boundaryzero)**2)\n",
+    "    bottom_u_bc = np.mean((u[ :, -1] - boundaryzero)**2)\n",
     "\n",
-    "    vzeroleft = np.zeros_like(v[:, 0, :])\n",
-    "    left_v_bc = np.mean((v[:, 0, :] - vzeroleft)**2)\n",
-    "    top_v_bc = np.mean((v[:, :, 0] - boundaryzero)**2)\n",
-    "    bottom_v_bc = np.mean((v[:, :, -1] - boundaryzero)**2)\n",
+    "    vzeroleft = np.zeros_like(v[ 0, :])\n",
+    "    left_v_bc = np.mean((v[ 0, :] - vzeroleft)**2)\n",
+    "    top_v_bc = np.mean((v[ :, 0] - boundaryzero)**2)\n",
+    "    bottom_v_bc = np.mean((v[ :, -1] - boundaryzero)**2)\n",
     "\n",
-    "    right_p_bc = np.mean((p[:, -1, :] - vzeroleft)**2)\n",
+    "    right_p_bc = np.mean((p[ -1, :] - vzeroleft)**2)\n",
     "\n",
     "    bc_loss = np.linalg.norm([left_T_bc, top_T_bc, bottom_T_bc, 2*left_u_bc, top_u_bc, bottom_u_bc, 2*left_v_bc, top_v_bc, bottom_v_bc, right_p_bc])\n",
     "\n",
@@ -117,16 +117,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "479706f2",
+   "execution_count": 7,
+   "id": "910d330f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(129, 129)\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_points = 129  # number of grid points\n",
+    "# Generate evenly spaced points in the Y dimension\n",
+    "y_values = np.linspace(-0.5, 0.5, num_points)\n",
+    "x_values=np.linspace(0,10,num_points)\n",
+    "# Repeat these points in the X dimension\n",
+    "\n",
+    "Y_data1 = np.tile(y_values, (num_points, 1))\n",
+    "print(Y_data1.shape)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "96d6e8c7",
+   "id": "099473c7",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1939c83",
+   "id": "1f6addd4",
    "metadata": {},
    "outputs": [],
    "source": []
