--- a/scipy_optimization_NS+HEAT.ipynb
+++ b/scipy_optimization_NS+HEAT.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5e75da35",
+   "id": "e60a4c08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ee4b0121",
+   "id": "92e7e2ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,15 +117,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "910d330f",
+   "execution_count": 12,
+   "id": "4d567bd7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(129, 129)\n"
+      "(129, 129) (129, 129)\n",
+      "[ 0.        0.078125  0.15625   0.234375  0.3125    0.390625  0.46875\n",
+      "  0.546875  0.625     0.703125  0.78125   0.859375  0.9375    1.015625\n",
+      "  1.09375   1.171875  1.25      1.328125  1.40625   1.484375  1.5625\n",
+      "  1.640625  1.71875   1.796875  1.875     1.953125  2.03125   2.109375\n",
+      "  2.1875    2.265625  2.34375   2.421875  2.5       2.578125  2.65625\n",
+      "  2.734375  2.8125    2.890625  2.96875   3.046875  3.125     3.203125\n",
+      "  3.28125   3.359375  3.4375    3.515625  3.59375   3.671875  3.75\n",
+      "  3.828125  3.90625   3.984375  4.0625    4.140625  4.21875   4.296875\n",
+      "  4.375     4.453125  4.53125   4.609375  4.6875    4.765625  4.84375\n",
+      "  4.921875  5.        5.078125  5.15625   5.234375  5.3125    5.390625\n",
+      "  5.46875   5.546875  5.625     5.703125  5.78125   5.859375  5.9375\n",
+      "  6.015625  6.09375   6.171875  6.25      6.328125  6.40625   6.484375\n",
+      "  6.5625    6.640625  6.71875   6.796875  6.875     6.953125  7.03125\n",
+      "  7.109375  7.1875    7.265625  7.34375   7.421875  7.5       7.578125\n",
+      "  7.65625   7.734375  7.8125    7.890625  7.96875   8.046875  8.125\n",
+      "  8.203125  8.28125   8.359375  8.4375    8.515625  8.59375   8.671875\n",
+      "  8.75      8.828125  8.90625   8.984375  9.0625    9.140625  9.21875\n",
+      "  9.296875  9.375     9.453125  9.53125   9.609375  9.6875    9.765625\n",
+      "  9.84375   9.921875 10.      ]\n"
      ]
     }
    ],
@@ -135,32 +154,33 @@
     "y_values = np.linspace(-0.5, 0.5, num_points)\n",
     "x_values=np.linspace(0,10,num_points)\n",
     "# Repeat these points in the X dimension\n",
-    "\n",
+    "X_data1=np.tile(x_values,(num_points,1))\n",
     "Y_data1 = np.tile(y_values, (num_points, 1))\n",
-    "print(Y_data1.shape)"
+    "print(Y_data1.shape,X_data1.shape)\n",
+    "print(X_data1[0,:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "099473c7",
+   "execution_count": 13,
+   "id": "277d553b",
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'u_initial' is not defined",
+     "evalue": "name 'x' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Initial parameters (flattened version of u, v, p, T)\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m params_initial \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mconcatenate([\u001b[43mu_initial\u001b[49m\u001b[38;5;241m.\u001b[39mflatten(), v_initial\u001b[38;5;241m.\u001b[39mflatten(), p_initial\u001b[38;5;241m.\u001b[39mflatten(), T_initial\u001b[38;5;241m.\u001b[39mflatten()])\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Optimize\u001b[39;00m\n\u001b[1;32m      5\u001b[0m result \u001b[38;5;241m=\u001b[39m minimize(physics_loss_numpy, params_initial, args\u001b[38;5;241m=\u001b[39m(x,), method\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mL-BFGS-B\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'u_initial' is not defined"
+      "Cell \u001b[0;32mIn[13], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m params_initial \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mconcatenate([u_initial\u001b[38;5;241m.\u001b[39mflatten(), v_initial\u001b[38;5;241m.\u001b[39mflatten(), p_initial\u001b[38;5;241m.\u001b[39mflatten(), T_initial\u001b[38;5;241m.\u001b[39mflatten()])\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# Optimize\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m result \u001b[38;5;241m=\u001b[39m minimize(physics_loss_numpy, params_initial, args\u001b[38;5;241m=\u001b[39m(\u001b[43mx\u001b[49m,), method\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mL-BFGS-B\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Extract the optimized parameters\u001b[39;00m\n\u001b[1;32m     13\u001b[0m u_optimized \u001b[38;5;241m=\u001b[39m result\u001b[38;5;241m.\u001b[39mx[:nx\u001b[38;5;241m*\u001b[39mny]\u001b[38;5;241m.\u001b[39mreshape(nx, ny)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
      ]
     }
    ],
    "source": [
     "# Initial parameters (flattened version of u, v, p, T)\n",
-    "xgrid=\n",
+    "grid=np.concatenate((X_data1,Y_data1),-1)\n",
     "u_initial=np.zeros_like(xgrid)\n",
     "v_initial=np.zeros_like(xgrid)\n",
     "p_initial=np.zeros_like(xgrid)\n",
@@ -180,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f6addd4",
+   "id": "eb6a1410",
    "metadata": {},
    "outputs": [],
    "source": []
