random pde codes for practice

--- a/NSSIMPLETEST.ipynb
+++ b/NSSIMPLETEST.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from scipy.optimize import minimize"
+    "from scipy.optimize import minimize #deprecated"
    ]
   },
   {
@@ -18,101 +18,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def physics_loss_numpy(params, x, alpha=0.143e-6, beta=1/1000, nu=0.000001):\n",
-    "    nx, ny = x.shape[0], x.shape[1]\n",
-    "    print(x.shape)\n",
-    "    dx = 10 / nx\n",
-    "    dy = 1 / ny\n",
-    "\n",
-    "    # Assuming params is a flat array, we'll need to reshape it to get u, v, p, T\n",
-    "    u = params[:nx*ny].reshape(nx, ny)\n",
-    "    v = params[nx*ny:2*nx*ny].reshape(nx, ny)\n",
-    "    p = params[2*nx*ny:3*nx*ny].reshape(nx, ny)\n",
-    "    T = params[3*nx*ny:].reshape(nx, ny)\n",
-    "    # Central difference for interior points for u_x\n",
-    "    u_x_internal = (u[ 2:, 1:-1] - u[ :-2, 1:-1]) / (2 * dx)\n",
-    "    u_y_internal= (u[ 1:-1,2:] - u[ 1:-1,:-2]) / (2 * dy)\n",
-    "    u_xx_internal= (u[ 2:, 1:-1] - 2 * u[ 1:-1, 1:-1] + u[ :-2, 1:-1]) / (dx ** 2)\n",
-    "    u_yy_internal=(u[ 1:-1,2:] - 2 * u[ 1:-1, 1:-1] + u[ 1:-1,:-2]) / (dy ** 2)\n",
-    "        \n",
-    "    v_x_internal = (v[ 2:, 1:-1] - v[ :-2, 1:-1]) / (2 * dx)\n",
-    "    v_y_internal= (v[ 1:-1,2:] - v[ 1:-1,:-2]) / (2 * dy)\n",
-    "    v_xx_internal= (v[ 2:, 1:-1] - 2 * v[ 1:-1, 1:-1] + v[ :-2, 1:-1]) / (dx ** 2)\n",
-    "    v_yy_internal=(v[ 1:-1,2:] - 2 * v[ 1:-1, 1:-1] + v[ 1:-1,:-2]) / (dy ** 2)\n",
-    "        \n",
-    "    T_x_internal = (T[ 2:, 1:-1] - T[ :-2, 1:-1]) / (2 * dx)\n",
-    "    T_y_internal= (T[ 1:-1,2:] - T[ 1:-1,:-2]) / (2 * dy)\n",
-    "    T_xx_internal= (T[ 2:, 1:-1] - 2 * T[ 1:-1, 1:-1] + T[ :-2, 1:-1]) / (dx ** 2)\n",
-    "    T_yy_internal=(T[ 1:-1,2:] - 2 * T[ 1:-1, 1:-1] + T[ 1:-1,:-2]) / (dy ** 2)\n",
-    "\n",
-    "    p_x_internal=(p[ 2:, 1:-1] - p[ :-2, 1:-1]) / (2 * dx)\n",
-    "    p_y_internal=(p[ 1:-1,2:] - p[ 1:-1,:-2]) / (2 * dy)\n",
-    "        # Continuity Loss\n",
-    "    u_internal=u[ 1:-1, 1:-1]\n",
-    "        \n",
-    "\n",
-    "    v_internal=v[ 1:-1, 1:-1]\n",
-    "\n",
-    "\n",
-    "        \n",
-    "        \n",
-    "\n",
-    "        \n",
-    "\n",
-    "    L_cont1 = u_x_internal + v_y_internal\n",
-    "\n",
-    "    # Create a zeros array with the shape of u_x_internal\n",
-    "    f = np.zeros_like(u_x_internal)\n",
-    "\n",
-    "    # Compute Mean Squared Error (MSE) in numpy\n",
-    "    L_cont = np.mean((L_cont1 - f)**2)\n",
-    "\n",
-    "    # Compute L_mom_u1, L_mom_v1, and L_heat1\n",
-    "    L_mom_u1 = u_internal*u_x_internal + v_internal*u_y_internal + beta*p_x_internal - nu*(u_xx_internal + u_yy_internal)\n",
-    "    L_mom_u = np.mean((L_mom_u1 - f)**2)\n",
-    "\n",
-    "    L_mom_v1 = u_internal*v_x_internal + v_internal*v_y_internal + beta*p_y_internal - nu*(v_xx_internal + v_yy_internal)\n",
-    "    L_mom_v = np.mean((L_mom_v1 - f)**2)\n",
-    "\n",
-    "    L_heat1 = u_internal*T_x_internal + v_internal*T_y_internal - alpha*(T_xx_internal + T_yy_internal)\n",
-    "    L_heat = np.mean((L_heat1 - f)**2)\n",
-    "\n",
-    "    u_avg = 10**-3\n",
-    "    u_inlet_expected = u_avg*1.5*(1 - 4*(y[ 0, :]**2))\n",
-    "    T_wall = 350\n",
-    "    T_center = 293\n",
-    "    T_inlet_expected = T_wall + (T_center - T_wall) * (1 - 4*(y[ 0, :]**2))\n",
-    "\n",
-    "    # Loss due to boundary conditions\n",
-    "    left_T_bc1 = T[ 0, :]\n",
-    "    left_T_bc = np.mean((left_T_bc1 - T_inlet_expected)**2)\n",
-    "\n",
-    "    top_T_bc1 = T[ :, 0]\n",
-    "    T_wallvec = np.full_like(top_T_bc1, T_wall)\n",
-    "    top_T_bc = np.mean((top_T_bc1 - T_wallvec)**2)\n",
-    "\n",
-    "    bottom_T_bc1 = T[ :, -1]\n",
-    "    bottom_T_bc = np.mean((bottom_T_bc1 - T_wallvec)**2)\n",
-    "\n",
-    "    boundaryzero = np.zeros_like(u[:, :, 0])\n",
-    "\n",
-    "    left_u_bc = np.mean((u[ 0, :] - u_inlet_expected)**2)\n",
-    "    top_u_bc = np.mean((u[ :, 0] - boundaryzero)**2)\n",
-    "    bottom_u_bc = np.mean((u[ :, -1] - boundaryzero)**2)\n",
-    "\n",
-    "    vzeroleft = np.zeros_like(v[ 0, :])\n",
-    "    left_v_bc = np.mean((v[ 0, :] - vzeroleft)**2)\n",
-    "    top_v_bc = np.mean((v[ :, 0] - boundaryzero)**2)\n",
-    "    bottom_v_bc = np.mean((v[ :, -1] - boundaryzero)**2)\n",
-    "\n",
-    "    right_p_bc = np.mean((p[ -1, :] - vzeroleft)**2)\n",
-    "\n",
-    "    bc_loss = np.linalg.norm([left_T_bc, top_T_bc, bottom_T_bc, 2*left_u_bc, top_u_bc, bottom_u_bc, 2*left_v_bc, top_v_bc, bottom_v_bc, right_p_bc])\n",
-    "\n",
-    "    # You'll end with computing the total loss:\n",
-    "    L = np.linalg.norm(L_mom_u + L_mom_v + L_cont + L_heat +bc_loss)\n",
-    "\n",
-    "    return L\n",
     "\n"
    ]
   },
@@ -195,22 +100,221 @@
     }
    ],
    "source": [
-    "# Initial parameters (flattened version of u, v, p, T)\n",
-    "grid=np.concatenate((X_data1,Y_data1),-1)\n",
-    "u_initial=np.zeros_like(X_data1)\n",
-    "v_initial=np.zeros_like(X_data1)\n",
-    "p_initial=np.zeros_like(X_data1)\n",
-    "T_initial=np.zeros_like(X_data1)\n",
-    "params_initial = np.concatenate([u_initial.flatten(), v_initial.flatten(), p_initial.flatten(), T_initial.flatten()])\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "# Optimize\n",
-    "result = minimize(physics_loss_numpy, params_initial, args=(grid,), method='L-BFGS-B')\n",
     "\n",
-    "# Extract the optimized parameters\n",
-    "u_optimized = result.x[:nx*ny].reshape(nx, ny)\n",
-    "v_optimized = result.x[nx*ny:2*nx*ny].reshape(nx, ny)\n",
-    "p_optimized = result.x[2*nx*ny:3*nx*ny].reshape(nx, ny)\n",
-    "T_optimized = result.x[3*nx*ny:].reshape(nx, ny)"
+    "DOMAIN_SIZE = 1.0\n",
+    "N_ITERATIONS = 500\n",
+    "TIME_STEP_LENGTH = 0.001\n",
+    "KINEMATIC_VISCOSITY = 0.1\n",
+    "DENSITY = 1.0\n",
+    "HORIZONTAL_VELOCITY_TOP = 1.0\n",
+    "\n",
+    "N_PRESSURE_POISSON_ITERATIONS = 50\n",
+    "STABILITY_SAFETY_FACTOR = 0.5\n",
+    "\n",
+    "element_lengthx=10/num_points\n",
+    "element_lengthy=1/num_points\n",
+    "X, Y =X_data1,Y_data1\n",
+    "\n",
+    "u_prev = np.zeros_like(X)\n",
+    "v_prev = np.zeros_like(X)\n",
+    "p_prev = np.zeros_like(X)\n",
+    "\n",
+    "\n",
+    "def central_difference_x(f):\n",
+    "    diff = np.zeros_like(f)\n",
+    "    diff[1:-1, 1:-1] = (\n",
+    "        f[1:-1, 2:  ]\n",
+    "            -\n",
+    "            f[1:-1, 0:-2]\n",
+    "        ) / (\n",
+    "            2 * element_lengthx\n",
+    "        )\n",
+    "    return diff\n",
+    "    \n",
+    "def central_difference_y(f):\n",
+    "    diff = np.zeros_like(f)\n",
+    "    diff[1:-1, 1:-1] = (\n",
+    "            f[2:  , 1:-1]\n",
+    "            -\n",
+    "            f[0:-2, 1:-1]\n",
+    "        ) / (\n",
+    "            2 * element_lengthy\n",
+    "        )\n",
+    "    return diff\n",
+    "    \n",
+    "def laplace(f):\n",
+    "    diff = np.zeros_like(f)\n",
+    "    diff[1:-1, 1:-1] = (\n",
+    "            f[1:-1, 0:-2]\n",
+    "            +\n",
+    "            f[0:-2, 1:-1]\n",
+    "            -\n",
+    "            4\n",
+    "            *\n",
+    "            f[1:-1, 1:-1]\n",
+    "            +\n",
+    "            f[1:-1, 2:  ]\n",
+    "            +\n",
+    "            f[2:  , 1:-1]\n",
+    "        ) / (\n",
+    "            element_length**2\n",
+    "        )\n",
+    "    return diff\n",
+    "    \n",
+    "\n",
+    "maximum_possible_time_step_length = (\n",
+    "        0.5 * element_length**2 / KINEMATIC_VISCOSITY\n",
+    "    )\n",
+    "if TIME_STEP_LENGTH > STABILITY_SAFETY_FACTOR * maximum_possible_time_step_length:\n",
+    "    raise RuntimeError(\"Stability is not guarenteed\")\n",
+    "\n",
+    "    \n",
+    "for _ in tqdm(range(N_ITERATIONS)):\n",
+    "    d_u_prev__d_x = central_difference_x(u_prev)\n",
+    "    d_u_prev__d_y = central_difference_y(u_prev)\n",
+    "    d_v_prev__d_x = central_difference_x(v_prev)\n",
+    "    d_v_prev__d_y = central_difference_y(v_prev)\n",
+    "    laplace__u_prev = laplace(u_prev)\n",
+    "    laplace__v_prev = laplace(v_prev)\n",
+    "\n",
+    "        # Perform a tentative step by solving the momentum equation without the\n",
+    "        # pressure gradient\n",
+    "    u_tent = (\n",
+    "            u_prev\n",
+    "            +\n",
+    "            TIME_STEP_LENGTH * (\n",
+    "                -\n",
+    "                (\n",
+    "                    u_prev * d_u_prev__d_x\n",
+    "                    +\n",
+    "                    v_prev * d_u_prev__d_y\n",
+    "                )\n",
+    "                +\n",
+    "                KINEMATIC_VISCOSITY * laplace__u_prev\n",
+    "            )\n",
+    "        )\n",
+    "    v_tent = (\n",
+    "            v_prev\n",
+    "            +\n",
+    "            TIME_STEP_LENGTH * (\n",
+    "                -\n",
+    "                (\n",
+    "                    u_prev * d_v_prev__d_x\n",
+    "                    +\n",
+    "                    v_prev * d_v_prev__d_y\n",
+    "                )\n",
+    "                +\n",
+    "                KINEMATIC_VISCOSITY * laplace__v_prev\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "        # Velocity Boundary Conditions: Homogeneous Dirichlet BC everywhere\n",
+    "        # except for the horizontal velocity at the top, which is prescribed\n",
+    "    u_tent[0, :] = 0.0\n",
+    "    u_tent[:, 0] = 0.0\n",
+    "    u_tent[:, -1] = 0.0\n",
+    "    u_tent[-1, :] = HORIZONTAL_VELOCITY_TOP\n",
+    "    v_tent[0, :] = 0.0\n",
+    "    v_tent[:, 0] = 0.0\n",
+    "    v_tent[:, -1] = 0.0\n",
+    "    v_tent[-1, :] = 0.0\n",
+    "\n",
+    "\n",
+    "    d_u_tent__d_x = central_difference_x(u_tent)\n",
+    "    d_v_tent__d_y = central_difference_y(v_tent)\n",
+    "\n",
+    "        # Compute a pressure correction by solving the pressure-poisson equation\n",
+    "    rhs = (\n",
+    "            DENSITY / TIME_STEP_LENGTH\n",
+    "            *\n",
+    "            (\n",
+    "                d_u_tent__d_x\n",
+    "                +\n",
+    "                d_v_tent__d_y\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "    for _ in range(N_PRESSURE_POISSON_ITERATIONS):\n",
+    "        p_next = np.zeros_like(p_prev)\n",
+    "        p_next[1:-1, 1:-1] = 1/4 * (\n",
+    "                +\n",
+    "                p_prev[1:-1, 0:-2]\n",
+    "                +\n",
+    "                p_prev[0:-2, 1:-1]\n",
+    "                +\n",
+    "                p_prev[1:-1, 2:  ]\n",
+    "                +\n",
+    "                p_prev[2:  , 1:-1]\n",
+    "                -\n",
+    "                element_length**2\n",
+    "                *\n",
+    "                rhs[1:-1, 1:-1]\n",
+    "            )\n",
+    "\n",
+    "            # Pressure Boundary Conditions: Homogeneous Neumann Boundary\n",
+    "            # Conditions everywhere except for the top, where it is a\n",
+    "            # homogeneous Dirichlet BC\n",
+    "        p_next[:, -1] = p_next[:, -2]\n",
+    "        p_next[0,  :] = p_next[1,  :]\n",
+    "        p_next[:,  0] = p_next[:,  1]\n",
+    "        p_next[-1, :] = 0.0\n",
+    "\n",
+    "        p_prev = p_next\n",
+    "        \n",
+    "\n",
+    "    d_p_next__d_x = central_difference_x(p_next)\n",
+    "    d_p_next__d_y = central_difference_y(p_next)\n",
+    "\n",
+    "        # Correct the velocities such that the fluid stays incompressible\n",
+    "    u_next = (\n",
+    "            u_tent\n",
+    "            -\n",
+    "            TIME_STEP_LENGTH / DENSITY\n",
+    "            *\n",
+    "            d_p_next__d_x\n",
+    "        )\n",
+    "    v_next = (\n",
+    "            v_tent\n",
+    "            -\n",
+    "            TIME_STEP_LENGTH / DENSITY\n",
+    "            *\n",
+    "            d_p_next__d_y\n",
+    "        )\n",
+    "\n",
+    "        # Velocity Boundary Conditions: Homogeneous Dirichlet BC everywhere\n",
+    "        # except for the horizontal velocity at the top, which is prescribed\n",
+    "    u_next[0, :] = 0.0\n",
+    "    u_next[:, 0] = 0.0\n",
+    "    u_next[:, -1] = 0.0\n",
+    "    u_next[-1, :] = 0.0\n",
+    "    v_next[0, :] = 0.0\n",
+    "    v_next[:, 0] = 0.0\n",
+    "    v_next[:, -1] = 0.0\n",
+    "    v_next[-1, :] = 0.0\n",
+    "\n",
+    "\n",
+    "        # Advance in time\n",
+    "    u_prev = u_next\n",
+    "    v_prev = v_next\n",
+    "    p_prev = p_next\n",
+    "    \n",
+    "\n",
+    "    # The [::2, ::2] selects only every second entry (less cluttering plot)\n",
+    "    plt.style.use(\"dark_background\")\n",
+    "    plt.figure()\n",
+    "    plt.contourf(X[::2, ::2], Y[::2, ::2], p_next[::2, ::2], cmap=\"coolwarm\")\n",
+    "    plt.colorbar()\n",
+    "\n",
+    "    plt.quiver(X[::2, ::2], Y[::2, ::2], u_next[::2, ::2], v_next[::2, ::2], color=\"black\")\n",
+    "    # plt.streamplot(X[::2, ::2], Y[::2, ::2], u_next[::2, ::2], v_next[::2, ::2], color=\"black\")\n",
+    "    plt.xlim((0, 1))\n",
+    "    plt.ylim((0, 1))\n",
+    "    plt.show()\n",
+    "\n"
    ]
   },
   {
